--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -1,40 +1,90 @@
 .profile {
-    width: 360px;
-    margin: 0 auto;
-    box-shadow: 0px 2px 2px hsla(0, 0%, 0%, 0.2);
-  }
-  .description {
-    margin: 60px auto 0;
-    text-align: center;
-  }
-  .avatar {
-    width: 180px;
-    height: 100%;
-    margin: 0 auto;
-  }
-  .name {
-    font-size: 24px;
-    color: #191970;
-    font-weight: 700;
-  }
-  .tag,
-  .location {
-    color: #808080;
-    font-weight: 500;
-  }
-  .stats {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    padding: 0;
-  }
-  .item {
-    display: flex;
-    flex-direction: column;
-    flex-basis: calc(100% / 3);
-    text-align: center;
-    background-color: #e9e9e9;
-    margin: 5px;
-    font-size: 16px;
-    font-weight: 500;
-  }
+  box-shadow: rgb(153 153 153 / 55%);
+
+  margin: 50px auto;
+  width: 331px;
+  border-radius: 5%;
+}
+
+.avatar {
+  width: 100px;
+  border: 2px solid #808080;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.description {
+  box-shadow: rgba(217, 14, 14, 0.55);
+  border: 2px solid #00d862;
+  background-color: #e0ede6;
+  border-radius: 5%;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  padding: 30px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  box-shadow: 0px 3px 13px 1px #3fd624, 5px 1px 15px 2px rgb(0 0 0 / 0%);
+}
+
+.name {
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 18px;
+}
+
+.tag {
+  font-weight: 500;
+  color: grey;
+  margin: 0;
+}
+
+.location {
+  font-weight: 500;
+  color: grey;
+  margin-bottom: 0;
+}
+
+.stats {
+  border: 2px solid #00d862;
+  border-radius: 15px;
+  background-color: #d8f1e3;
+
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 331px;
+  height: 70px;
+  margin: 0;
+  padding: 0;
+  margin-top: 5px;
+
+  box-shadow: 0px 8px 13px 1px #3fd624, 5px 5px 15px 2px rgb(0 0 0 / 0%);
+}
+
+.stats__item {
+  width: 100px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: normal;
+  align-items: center;
+}
+
+.stats__item:not(:last-child) {
+  border-right: 3px solid #00d862;
+}
+
+.quantity {
+  font-weight: bold;
+}
+.label {
+  margin-bottom: 5px;
+
+  font-weight: 500;
+  font-size: 18px;
+  color: grey;
+}
