--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -1,41 +1,41 @@
-.statistics {
-    width: 500px;
-    margin: 0 auto;
-  }
-  .title {
-    text-align: center;
-    font-size: 30px;
-  }
-  .statList {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    padding: 0;
-  }
-  .item:nth-child(1) {
-    background-color: #fac4be;
-  }
-  .item:nth-child(2) {
-    background-color: #fdfd9e;
-  }
-  .item:nth-child(3) {
-    background-color: #d8bfd8;
-  }
-  .item:nth-child(4) {
-    background-color: #cdff9a;
-  }
-  .item:nth-child(5) {
-    background-color: #c2e0fd;
-  }
-  .item {
-    display: flex;
-    flex-direction: column;
-    flex-basis: calc(100% / 5);
-    margin: 5px;
-  }
-  .label,
-  .percentage {
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-  }
+.stat {
+  display: flex;
+
+  justify-content: space-between;
+
+  background-color: #d8f1e3;
+  list-style: none;
+  padding: 50px 15px;
+  border-radius: 0 0 10px 10px;
+  margin: 0;
+}
+
+.stat__list {
+  background-color: aqua;
+  padding: 5px;
+  width: 50px;
+  border-radius: 5px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 10px;
+}
+
+.stat__item:not(:last-child) {
+  border-right: 3px solid #131614;
+}
+
+.pdf {
+  background: green;
+}
+.mp3 {
+  background: rgb(128, 0, 70);
+}
+.docx {
+  background: rgb(128, 58, 0);
+}
+.psd {
+  background: rgb(30, 0, 128);
+}
